fix: hack to eliminate the double scrollbar

--- a/packages/uhk-web/src/app/components/device/mouse-speed/mouse-speed.component.scss
+++ b/packages/uhk-web/src/app/components/device/mouse-speed/mouse-speed.component.scss
@@ -25,4 +25,9 @@
             margin-top: 2rem;
         }
     }
+
+    .placeholder {
+        height: 3rem;
+    }
+
 }
